Closed
Bug 1316145
Opened 9 years ago
Closed 9 years ago
Intermittent dom/media/tests/mochitest/test_peerConnection_capturedVideo.html | application crashed [@ mozilla::TaskQueue::Dispatch]
Categories
(Core :: Audio/Video: Playback, defect, P3)
Tracking
()
RESOLVED
FIXED
mozilla53
| Tracking | Status | |
|---|---|---|
| firefox50 | --- | unaffected |
| firefox51 | --- | unaffected |
| firefox52 | --- | fixed |
| firefox53 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: jwwang)
References
Details
(Keywords: intermittent-failure, regression)
Attachments
(1 file, 1 obsolete file)
|
58 bytes,
text/x-review-board-request
|
jya
:
review+
jcristau
:
approval-mozilla-aurora+
|
Details |
Filed by: wkocher [at] mozilla.com
https://treeherder.mozilla.org/logviewer.html#?job_id=38830567&repo=mozilla-inbound
https://archive.mozilla.org/pub/firefox/tinderbox-builds/mozilla-inbound-linux-pgo/1478610504/mozilla-inbound_ubuntu32_vm_test_pgo-mochitest-media-bm05-tests1-linux32-build63.txt.gz
| Assignee | ||
Updated•9 years ago
|
Component: Audio/Video → WebRTC
Comment 1•9 years ago
|
||
I'm still reading the code. As far as I see it is rather easy to enter the state where the thread is closing yet we're still dispatching to it. For example Canonical::Set.
And all the StableState usage... if one happens to try to close the AbstractThread in a nested event loop, StableState stuff will just run using closing thread.
But haven't managed to reproduce locally, so don't know which case this is about.
Updated•9 years ago
|
Rank: 35
Priority: -- → P3
| Comment hidden (Intermittent Failures Robot) |
Comment 3•9 years ago
|
||
jww, jya, do you think you could have time to look at this a bit?
The current guess is that some thread somewhere is shutting down and after that we still try to dispatch tasks to it. (Possibly nested event loop spinning in the main thread is related here?)
As far as I see bug 1306591 shouldn't be able to cause this, but it could certainly reveal wrong assumptions in code.
Flags: needinfo?(jyavenard)
Flags: needinfo?(jwwang)
| Assignee | ||
Comment 4•9 years ago
|
||
Bug 1225731 will help us figure out which callsite is doing Dispatch() after task queue shutdown. Let's just wait for reports to reveal it.
Flags: needinfo?(jwwang)
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Comment 8•9 years ago
|
||
This is a regression caused by bug 1315581.
| Assignee | ||
Updated•9 years ago
|
Component: WebRTC → Audio/Video: Playback
Version: unspecified → 52 Branch
| Comment hidden (mozreview-request) |
| Assignee | ||
Updated•9 years ago
|
Attachment #8812077 -
Flags: review?(jyavenard)
| Comment hidden (mozreview-request) |
| Assignee | ||
Updated•9 years ago
|
Attachment #8812077 -
Attachment is obsolete: true
Attachment #8812077 -
Flags: review?(jyavenard)
| Assignee | ||
Updated•9 years ago
|
Attachment #8812115 -
Flags: review?(jyavenard)
Comment 11•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8812115 [details]
Bug 1316145 - pass DontAssertDispatchSuccess when dispatching events because it is hard to enforce notification happens before AbstractThread shutdown.
https://reviewboard.mozilla.org/r/93994/#review94142
Attachment #8812115 -
Flags: review?(jyavenard) → review+
Comment 12•9 years ago
|
||
Pushed by jwwang@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/6e593b6f2ee6
pass DontAssertDispatchSuccess when dispatching events because it is hard to enforce notification happens before AbstractThread shutdown. r=jya
| Comment hidden (Intermittent Failures Robot) |
Comment 14•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox53:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Comment 15•9 years ago
|
||
Please request Aurora on this when you get a chance.
status-firefox50:
--- → unaffected
status-firefox51:
--- → unaffected
status-firefox52:
--- → affected
Flags: needinfo?(jwwang)
| Assignee | ||
Comment 16•9 years ago
|
||
Comment on attachment 8812115 [details]
Bug 1316145 - pass DontAssertDispatchSuccess when dispatching events because it is hard to enforce notification happens before AbstractThread shutdown.
Approval Request Comment
[Feature/regressing bug #]:1315581
[User impact if declined]:assertion
[Describe test coverage new/current, TreeHerder]:TreeHerder
[Risks and why]: Low. The change is quite simple.
[String/UUID change made/needed]:none
Flags: needinfo?(jwwang)
Attachment #8812115 -
Flags: approval-mozilla-aurora?
Comment 17•9 years ago
|
||
Comment on attachment 8812115 [details]
Bug 1316145 - pass DontAssertDispatchSuccess when dispatching events because it is hard to enforce notification happens before AbstractThread shutdown.
one-line fix for intermittent regression, let's get this in aurora52
Attachment #8812115 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 18•9 years ago
|
||
| bugherder uplift | ||
You need to log in
before you can comment on or make changes to this bug.
Description
•