Bug 1316145 - Pass DontAssertDispatchSuccess when dispatching events because it is hard to enforce notification happens before AbstractThread shutdown. r=jya, a=jcristau

MozReview-Commit-ID: 2SATSQfdskl

--HG--
extra : source : 6e593b6f2ee6542515c9ed61748e6256fd43fff5